Use jQuery animation to slowly expand server suggestions (to avoid layout flickering that would distract the user)
svn path=/src/trunk/Pootle/; revision=16496

--- a/html/translate.css
+++ b/html/translate.css
@@ -517,6 +517,11 @@ div.translator-comments + #suggestion-container
     margin-bottom: 0.5em;
 }
 
+.suggestion-block:last-child
+{
+    margin-bottom: 0;
+}
+
 .suggestion-title
 {
     color: #999;
